fix: removed modal overflow problem and some comments

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,8 +1,6 @@
 :root {
   --text-color: black;
   --text-light-color: white;
-  /* --bg-color: #e5e7eb; */
-  /* --bg-color: #b3b4b8; */
   --bg-color: #141414;
   --font: "Montserrat", sans-serif;
 }
@@ -19,7 +17,6 @@ html {
 
 body {
   margin: 0;
-  /* font: 16px/1.7 "Source Sans Pro", Helvetica, Helvetica Neue, Arial, sans-serif; */
   font-family: var(--font);
   color: var(--text-color);
   background-color: var(--bg-color);
@@ -42,13 +39,13 @@ header {
 }
 
 .header-container {
-  /* background-color: rgb(39, 39, 39); */
   margin: 0 auto;
   display: flex;
   align-items: center;
   height: 80px;
   /* padding: 0 2rem; */
-  max-width: 75%;
+  /* max-width: 75%; */
+  max-width: 50%;
 }
 
 .logo-wrapper {
@@ -87,11 +84,8 @@ header {
   width: 100%;
   background-color: #2d3748;
   border: 1px solid rgba(255, 255, 255, 0.16);
-  /* box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 0px 1px,
-    rgba(0, 0, 0, 0.2) 0px 5px 10px, rgba(0, 0, 0, 0.4) 0px 15px 40px; */
   padding: 0.5rem 0.7rem 0.5rem 0.7rem;
   border-radius: 0.375rem;
-  /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
   box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px,
     rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px,
     rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
@@ -165,6 +159,9 @@ header {
 .gallery__image:hover {
   border: 1px solid rgba(255, 255, 255, 0.2);
 }
+.chakra-modal--body-4 {
+  /* max-height: 80vh; */
+}
 
 .popup-img {
   height: 100%;
@@ -173,6 +170,16 @@ header {
   margin: 0 auto;
 }
 
+@media (max-width: 1440px) {
+  .header-container {
+    max-width: 60%;
+  }
+}
+@media (max-width: 1200px) {
+  .header-container {
+    max-width: 75%;
+  }
+}
 @media (max-width: 660px) {
   .gallery__image {
     width: 350px;
